Updated latest changes ready for main. More manual testing needed later
